anomaly-detection-k8s/applications/kafka/kafka1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka1
  namespace: anomaly-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
      - name: kafka1
        image: confluentinc/cp-kafka:7.8.0
        ports:
        - containerPort: 9092
        - containerPort: 9093
        - containerPort: 9096
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - name: kafka1-data
          mountPath: /var/lib/kafka/data
      volumes:
      - name: kafka1-data
        persistentVolumeClaim:
          claimName: kafka1-data
