anomaly-detection-k8s/applications/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka1
  namespace: anomaly-system
spec:
  selector:
    app: kafka1
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
  - name: external
    port: 9096
    targetPort: 9096
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka2
  namespace: anomaly-system
spec:
  selector:
    app: kafka2
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
  - name: external
    port: 9096
    targetPort: 9096
  type: ClusterIP
